@@ -9,6 +9,7 @@
 * Bug 2931722: pchheader handling not consistent between tools
 * Bug 2958829: Files pattern matching including too many files
 * Bug 2953594: includedirs / libdirs converting absolute paths to relative
+* Bug 2936188: Improve handling for invalid values in lists
 
 
 -----
